# kumori-bar

./: .gitmodules  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwindcss.d.ts  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: app.html
src-server/: esbuild.config.mjs  index.ts  package-lock.json  package.json  pkg.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json  oauth.json  settings.json  store.json
src-tauri/icons/: icon.icns
src-tauri/src/: appbar.rs  constants.rs  flags.rs  listener.rs  main.rs  player.rs  settings.rs
src-tauri/src/winplayer/: clplayer.rs  clplayermanager.rs  cltypes.rs  mod.rs  player.rs  playermanager.rs  types.rs  util.rs
src/lib/: index.ts  settings.ts  types.d.ts  types.ts
src/routes/: +layout.svelte  +page.svelte  FpsMonitor.svelte  MediaControlButton.svelte  MediaWidget.svelte  SettingsWidget.svelte  Spotify.svelte  WinTabWidget.svelte  WorkspaceWidget.svelte
src/routes/Icons/: CloseIcon.svelte  LikeIcon.svelte  LoadingIcon.svelte  MetaIcon.svelte  NextIcon.svelte  NotLikeIcon.svelte  PauseIcon.svelte  PlayIcon.svelte  PrevIcon.svelte
src/routes/settings/: +page.svelte  FeatureController.svelte  SettingsBar.svelte  SettingsMenuItem.svelte  ThemeController.svelte  ThemePreview.svelte
src/store/: theme.ts  update.ts
