[package]
name = "kumori-bar"
version = "0.1.0"
description = "A Tauri App"
authors = ["Olli-Pekka Lehtinen"]
license = ""
repository = ""
default-run = "kumori-bar"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [ "system-tray", "window-all", "wry", "devtools"] }
log = "0.4.17"
async-std = "1.12.0"
souvlaki = "0.7.3"
raw-window-handle = "0.5.2"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
[dependencies.windows]

version = "0.44.0"
features = [
    "Win32_Foundation",
    "Foundation",
    "Media",
    "Media_Control",
    "Media_Playback",
    "Win32_Media",
    "Win32_System_Com",
    "Win32_Media_MediaPlayer",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
]
