[package]
name = "kumori-bar"
version = "0.1.0"
description = "A Tauri App"
authors = ["Olli-Pekka Lehtinen"]
license = ""
repository = ""
default-run = "kumori-bar"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [ "system-tray", "window-all", "devtools"] }
log = "0.4.17"
chrono = "0.4.28"
tokio = { version = "1", features = ["full"] }
md5 = "0.7.0"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
[dependencies.windows]
version = "0.44.0"
features = [
       "ApplicationModel",
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "Media_Control",
    "Storage_Streams",
    "System",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",

]
