[package]
name = "kumori-bar"
version = "0.2.1"
description = "A Tauri App"
authors = ["Olli-Pekka Lehtinen"]
license = "MIT"
repository = "https://github.com/oplehtinen/kumori-bar"
default-run = "kumori-bar"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
winplayer_lib = { path = "src/winplayer"}
chrono = "0.4.28"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools", "tray-icon"] }
tauri-plugin-devtools = "2.0.0"
log = "0.4.17"
enigo = "0.3.0"
tauri-plugin-oauth = "2"
tauri-plugin-shell = "2"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
